# GIGABOT

./: .env.example  .gitignore  COMMUNICATION.md  Checkpoint.md  Dockerfile  GIGABOT.md  In-Progress.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
config/: config.json
config/cron/: jobs.json
config/sessions/: cli_direct.jsonl
nanobot/: __init__.py
nanobot/agent/: __init__.py  compaction.py  context.py  loop.py  swarm_trigger.py  tool_advisor.py  tool_manager.py  validation.py
nanobot/agent/tools/: __init__.py  base.py  browser.py  dashboard.py  document.py  gateway.py  memory.py  patch.py  process.py  shell.py  swarm.py
nanobot/agent/workflows/: __init__.py  dev_workflow.py
nanobot/auto_reply/: __init__.py  commands.py  dispatch.py  queue.py
nanobot/channels/: base.py  discord.py  manager.py  matrix.py  signal.py  slack.py
nanobot/cli/: commands.py  setup.py
nanobot/config/: loader.py  schema.py
nanobot/cron/: service.py
nanobot/daemon/: __init__.py  manager.py
nanobot/hooks/: __init__.py  service.py
nanobot/intent/: __init__.py  tracker.py
nanobot/memory/: __init__.py  evolution.py  search.py  store.py  vector.py
nanobot/nodes/: __init__.py  approvals.py  host.py  manager.py  protocol.py  router.py
nanobot/proactive/: __init__.py  actions.py  engine.py  triggers.py
nanobot/profiler/: __init__.py  interviewer.py  profile.py  registry.py  tests.py
nanobot/providers/: __init__.py  litellm_provider.py
nanobot/routing/: __init__.py  classifier.py  router.py
nanobot/security/: __init__.py  approval.py  audit.py  auth.py  policy.py  sandbox.py
nanobot/server/: __init__.py  agent_manager.py  dependencies.py  main.py
nanobot/server/middleware/: __init__.py  auth.py
nanobot/server/routers/: __init__.py  chat.py  config.py  gateways.py  providers.py  system.py
nanobot/swarm/: __init__.py  deliberation.py  orchestrator.py  patterns.py  quality_gate.py  roles.py  team.py  team_agent.py  worker.py
nanobot/templates/: __init__.py  generator.py  registry.py
nanobot/tracking/: __init__.py  cache.py  optimizer.py  tokens.py
nanobot/ui/: __init__.py  api.py  server.py  versions.py
tests/: __init__.py  conftest.py  test_fastapi_integration.py  test_settings_api.py
workspace/: AGENTS.md  PHASE_5_PLAN.md  SOUL.md
workspace/index/: 00_MASTER_MAP.md  01_ARCHITECTURE.md  02_CORE_FUNCTIONS.md  03_UI_COMPONENTS.md  04_SCRIPTS_CLI.md  05_DATA_MODELS.md  06_DEBUG_LOG.md
(+67 files in other folders)
